--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ matrix:
     - os: osx
       node_js: stable
       osx_image: xcode8.3
-
+#    ^ it's google's fault
 before_install:
 - npm install google-closure-library
 - npm install google-closure-compiler
